--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
@@ -16,6 +17,7 @@
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.52.4",
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-react": "^4.7.0",
     "tailwindcss": "^4.1.14",
