--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@rollup/rollup-win32-x64-msvc": "^4.52.4",
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "vite": "^5.4.20"
   },
