--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.22",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
+    "react-syntax-highlighter": "^15.6.6",
+    "remark-gfm": "^4.0.1",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
